--- a/catalog.html
+++ b/catalog.html
@@ -2,231 +2,224 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
 </head>
 
 <body>
 
-    <header>
-        <nav>
-            <a href="index.html">
-                <img src="img/logo/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
-            </a>
-            <ul>
-                <li><a href="blank.html">Студия</a></li>
-                <li><a href="blank.html">Клиенты</a></li>
-                <li><a>Магазин</a></li>
-                <li><a href="blank.html">Контакты</a></li>
-            </ul>
-            <a href="blank.html">Корзина</a>
-        </nav>
-    </header>
-    <main>
-        <h1>Магазин готовых шаблонов</h1>
-        <section>
-            <h2>Фильтр товаров</h2>
-            <form action="https://echo.htmlacademy.ru" method="get">
-                <fieldset>
-                    <legend>Стоимость:</legend>
-                    <input type="range" name="cost" id="filter-cost" min="0" max="15000">
-                    <label>от <input type="number" name="price-begin"></label>
-                    <label>до <input type="number" name="price-finish"></label>
-                </fieldset>
-                <fieldset>
-                    <legend>Сетка:</legend>
-                    <ul>
-                        <li>
-                            <input type="radio" checked name="layout" value="adaptive" id="filter-adaptive">
-                            <label for="filter-adaptive">Адаптивная</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="layout" value="fix" id="filter-fix">
-                            <label for="filter-fix">Фиксированная</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="layout" value="rubber" id="filter-rubber">
-                            <label for="filter-rubber">Резиновая</label>
-                        </li>
-                    </ul>
-                </fieldset>
-                <fieldset>
-                    <legend>Особенности:</legend>
-                    <ul>
-                        <li>
-                            <input type="checkbox" checked name="slider" id="filter-slider">
-                            <label for="filter-slider">Слайдер</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" name="advantages" id="filter-advantages">
-                            <label for="filter-advantages">Блок преимуществ</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" checked name="news" id="filter-news">
-                            <label for="filter-news">Новости</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" name="gallery" id="filter-gallery">
-                            <label for="filter-gallery">Галерея</label>
-                        </li>
-                        <li>
-                            <input type="checkbox" name="basket" id="filter-basket">
-                            <label for="filter-basket">Корзина</label>
-                        </li>
-                    </ul>
-                </fieldset>
-                <button type="submit">Показать</button>
-            </form>
+  <header>
+    <nav>
+      <a href="index.html">
+        <img src="img/logo/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
+      </a>
+      <ul>
+        <li><a href="blank.html">Студия</a></li>
+        <li><a href="blank.html">Клиенты</a></li>
+        <li><a>Магазин</a></li>
+        <li><a href="blank.html">Контакты</a></li>
+      </ul>
+      <a href="blank.html">Корзина</a>
+    </nav>
+  </header>
+  <main>
+    <h1>Магазин готовых шаблонов</h1>
+    <section>
+      <h2>Фильтр товаров</h2>
+      <form action="https://echo.htmlacademy.ru" method="get">
+        <fieldset>
+          <legend>Стоимость:</legend>
+          <input type="range" name="cost" id="filter-cost" min="0" max="15000">
+          <label>от <input type="number" name="price-begin"></label>
+          <label>до <input type="number" name="price-finish"></label>
+        </fieldset>
+        <fieldset>
+          <legend>Сетка:</legend>
+          <ul>
+            <li>
+              <input type="radio" checked name="layout" value="adaptive" id="filter-adaptive">
+              <label for="filter-adaptive">Адаптивная</label>
+            </li>
+            <li>
+              <input type="radio" name="layout" value="fix" id="filter-fix">
+              <label for="filter-fix">Фиксированная</label>
+            </li>
+            <li>
+              <input type="radio" name="layout" value="rubber" id="filter-rubber">
+              <label for="filter-rubber">Резиновая</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Особенности:</legend>
+          <ul>
+            <li>
+              <input type="checkbox" checked name="slider" id="filter-slider">
+              <label for="filter-slider">Слайдер</label>
+            </li>
+            <li>
+              <input type="checkbox" name="advantages" id="filter-advantages">
+              <label for="filter-advantages">Блок преимуществ</label>
+            </li>
+            <li>
+              <input type="checkbox" checked name="news" id="filter-news">
+              <label for="filter-news">Новости</label>
+            </li>
+            <li>
+              <input type="checkbox" name="gallery" id="filter-gallery">
+              <label for="filter-gallery">Галерея</label>
+            </li>
+            <li>
+              <input type="checkbox" name="basket" id="filter-basket">
+              <label for="filter-basket">Корзина</label>
+            </li>
+          </ul>
+        </fieldset>
+        <button type="submit">Показать</button>
+      </form>
 
-            <h2>Сортировать:</h2>
-            <h3>Тип сортировки</h3>
-            <ul>
-                <li>
-                    <a href="blank.html">по цене</a>
-                </li>
-                <li>
-                    <a href="blank.html">по типу</a>
-                </li>
-                <li>
-                    <a href="blank.html">по названию</a>
-                </li>
-            </ul>
+      <h2>Сортировать:</h2>
+      <h3>Тип сортировки</h3>
+      <ul>
+        <li>
+          <a href="blank.html">по цене</a>
+        </li>
+        <li>
+          <a href="blank.html">по типу</a>
+        </li>
+        <li>
+          <a href="blank.html">по названию</a>
+        </li>
+      </ul>
 
-            <h3>Направление сортировки</h3>
-            <ul>
-                <li>
-                    <a href="blank.html">по убыванию</a>
-                </li>
-                <li>
-                    <a href="blank.html">по возрастанию</a>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Шаблоны</h2>
-            <ul>
-                <li>
-                    <a href="blank.html">
-                        <img src="img/templates/sedona.jpg" width="358" height="578" alt="Седона">
-                    </a>
-                    <a href="blank.html">
-                        <h3>Седона</h3>
-                    </a>
-                    <p>Информационный сайт<br>
-                        для туристов</p>
-                    <a href="blank.html">
-                        9 900 ₽
-                    </a>
-                </li>
-                <li>
-                    <a href="blank.html">
-                        <img src="img/templates/pink.jpg" width="358" height="578" alt="Пинк">
-                    </a>
-                    <a href="blank.html">
-                        <h3>Pink App</h3>
-                    </a>
-                    <p>Продуктовый лендинг<br>
-                        приложения для iOS и Android</p>
-                    <a href="blank.html">
-                        9 900 ₽
-                    </a>
-                </li>
-                <li>
-                    <a href="blank.html">
-                        <img src="img/templates/barbersop.jpg" width="358" height="578" alt="Барбершоп">
-                    </a>
-                    <a href="blank.html">
-                        <h3>Barbershop</h3>
-                    </a>
-                    <p>Сайт салона красоты.<br>
-                        Для мужчин, да.</p>
-                    <a href="blank.html">
-                        9 900 ₽
-                    </a>
-                </li>
-                <li>
-                    <a href="blank.html">
-                        <img src="img/templates/mishka.jpg" width="358" height="578" alt="Мишка">
-                    </a>
-                    <a href="blank.html">
-                        <h3>MISHKA</h3>
-                    </a>
-                    <p>Интернет-магазин<br>
-                        вязаных игрушек</p>
-                    <a href="blank.html">
-                        9 900 ₽
-                    </a>
-                </li>
-                <li>
-                    <a href="blank.html">
-                        <img src="img/templates/a-plus.jpg" width="358" height="578" alt="A Plus">
-                    </a>
-                    <a href="blank.html">
-                        <h3>A Plus</h3>
-                    </a>
-                    <p>Лендинг курсов повышения квалификации</p>
-                    <a href="blank.html">
-                        9 900 ₽
-                    </a>
-                </li>
-                <a href="blank.html">
-                    <img src="img/templates/kvast.jpg" width="358" height="578" alt="КВАСТ">
-                </a>
-                <a href="blank.html">
-                    <h3>КВАСТ</h3>
-                </a>
-                <p>Промо-сайт производителя<br>
-                    крафтового кваса</p>
-                <a href="blank.html">
-                    9 900 ₽
-                </a>
-            </ul>
-            <ul>
-                <li>
-                    <a>1</a>
-                </li>
-                <li>
-                    <a href="blank.html">2</a>
-                </li>
-                <li>
-                    <a href="blank.html">3</a>
-                </li>
-                <li>
-                    <a href="blank.html">Следующая</a>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <section>
-            <img src="img/map.jpg" width="1440" height="416" alt="Карта проезда к студии Нердс">
-            <img src="img/map-marker.png" width="231" height="190" alt="">
-        </section>
-        <section>
-            <h2>Контакты</h2>
-            <p>NЁRDS DESIGN STUDIO</p>
-            <p>191186, Санкт-Петербург,<br>
-                ул. Б. Конюшенная, д. 19/8<br>
-                тел. +7 (812) 275-75-75</p>
-            <a href="blank.html">Напишите нам</a>
-        </section>
-        <section>
-            <h2>Давайте дружить!</h2>
-            <ul>
-                <li>
-                    <a href="#"><img src="img/icon/vk-icon.png" width="26" height="15" alt="Вконтакте"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="img/icon/fb-icon.png" width="12" height="22" alt="Фейсбук"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="img/icon/insta-icon.png" width="21" height="21" alt="Инстаграм"></a>
-                </li>
-            </ul>
-            <p><b>Давайте дружить, это выгодно!</b></p>
-            <p>Скидка 10% для друзей из социальных сетей.</p>
-        </section>
-    </footer>
+      <h3>Направление сортировки</h3>
+      <ul>
+        <li>
+          <a href="blank.html">по убыванию</a>
+        </li>
+        <li>
+          <a href="blank.html">по возрастанию</a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Шаблоны</h2>
+      <ul>
+        <li>
+          <a href="blank.html">
+            <img src="img/templates/sedona.png" width="358" height="578" alt="Седона">
+          </a>
+          <a href="blank.html">
+            <h3>Седона</h3>
+          </a>
+          <p>Информационный сайт<br> для туристов</p>
+          <a href="blank.html">
+            9 900 ₽
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="img/templates/pink.png" width="358" height="578" alt="Пинк">
+          </a>
+          <a href="blank.html">
+            <h3>Pink App</h3>
+          </a>
+          <p>Продуктовый лендинг<br> приложения для iOS и Android</p>
+          <a href="blank.html">
+            9 900 ₽
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="img/templates/barbershop.png" width="358" height="578" alt="Барбершоп">
+          </a>
+          <a href="blank.html">
+            <h3>Barbershop</h3>
+          </a>
+          <p>Сайт салона красоты.<br> Для мужчин, да.</p>
+          <a href="blank.html">
+            9 900 ₽
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="img/templates/mishka.png" width="358" height="578" alt="Мишка">
+          </a>
+          <a href="blank.html">
+            <h3>MISHKA</h3>
+          </a>
+          <p>Интернет-магазин<br> вязаных игрушек</p>
+          <a href="blank.html">
+            9 900 ₽
+          </a>
+        </li>
+        <li>
+          <a href="blank.html">
+            <img src="img/templates/a-plus.png" width="358" height="578" alt="A Plus">
+          </a>
+          <a href="blank.html">
+            <h3>A Plus</h3>
+          </a>
+          <p>Лендинг курсов повышения квалификации</p>
+          <a href="blank.html">
+            9 900 ₽
+          </a>
+        </li>
+        <a href="blank.html">
+          <img src="img/templates/kvast.png" width="358" height="578" alt="КВАСТ">
+        </a>
+        <a href="blank.html">
+          <h3>КВАСТ</h3>
+        </a>
+        <p>Промо-сайт производителя<br> крафтового кваса</p>
+        <a href="blank.html">
+          9 900 ₽
+        </a>
+      </ul>
+      <ul>
+        <li>
+          <a>1</a>
+        </li>
+        <li>
+          <a href="blank.html">2</a>
+        </li>
+        <li>
+          <a href="blank.html">3</a>
+        </li>
+        <li>
+          <a href="blank.html">Следующая</a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <section>
+      <img src="img/map.jpg" width="1440" height="416" alt="Карта проезда к студии Нердс">
+      <img src="img/map-marker.png" width="231" height="190" alt="">
+    </section>
+    <section>
+      <h2>Контакты</h2>
+      <p>NЁRDS DESIGN STUDIO</p>
+      <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75</p>
+      <a href="blank.html">Напишите нам</a>
+    </section>
+    <section>
+      <h2>Давайте дружить!</h2>
+      <ul>
+        <li>
+          <a href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+      </ul>
+      <p><b>Давайте дружить, это выгодно!</b></p>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
+    </section>
+  </footer>
 
 </body>
 
