--- a/index.html
+++ b/index.html
@@ -1,190 +1,208 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-    <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="apple.png">
-    <link rel="manifest" href="manifest.webmanifest">
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicon/32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="page-body">
 
-    <header>
-        <nav>
-            <a>
-                <img src="img/logo/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
-            </a>
-            <ul>
-                <li><a href="blank.html">Студия</a></li>
-                <li><a href="blank.html">Клиенты</a></li>
-                <li><a href="catalog.html">Магазин</a></li>
-                <li><a href="blank.html">Контакты</a></li>
-            </ul>
-            <a href="blank.html">Корзина</a>
-        </nav>
-    </header>
+  <header class="main-header">
+    <nav class="main-nav">
+      <a class="main-header-logo">
+        <img src="/img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
+      </a>
+      <ul class="site-nav">
+        <li class="nav-item"><a href="blank.html">Студия</a></li>
+        <li class="nav-item"><a href="blank.html">Клиенты</a></li>
+        <li class="nav-item"><a href="catalog.html">Магазин</a></li>
+        <li class="nav-item"><a href="blank.html">Контакты</a></li>
+      </ul>
+      <a class="cart-link" href="blank.html">Корзина</a>
+    </nav>
+  </header>
 
-    <main>
-        <h1>Нёрдс</h1>
-        <section>
-            <h2>Информация</h2>
+  <main class="page-main">
+    <h1>Нёрдс</h1>
+    <section>
+      <h2>Информация</h2>
 
-            <div class="slider">
-                <div>
-                    <div>
-                        <p><b>Долго, дорого,<br>
-                                скурпулезно.</b></p>
-                        <p>Математически выверенный дизайн<br>
-                            для вашего сайта или мобильного приложения.</p>
-                        <a href="blank.html">Узнать больше</a>
-                        <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="">
-                        <!--не вижу смысла называть альт т.к. нет смысловой нагрузки в изображении-->
-                    </div>
-                    <div>
-                        <p><b>Любим математику<br>
-                                как никто другой</b></p>
-                        <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-                        <a href="blank.html">Узнать больше</a>
-                        <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="">
-                    </div>
-                    <div>
-                        <p><b>Только ночь,<br>
-                                только хардкор</b></p>
-                        <p>Работать днем, как все? Мы против этого.
-                            Ближе к полуночи работа только начинается.</p>
-                        <a href="blank.html">Узнать больше</a>
-                        <img src="img/slider/nerds-index-slide3.png" width="760" height="431" alt="">
-                    </div>
-                </div>
-                <ul>
-                    <li><button type="button">Слайд 1</button></li>
-                    <li><button type="button">Слайд 2</button></li>
-                    <li><button type="button">Слайд 3</button></li>
-                </ul>
-            </div>
+      <div class="slider">
+        <div>
+          <div class="slide">
+            <p class="slide-title">Долго, дорого,<br>
+              скурпулезно.</p>
+            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <a class="button" href="blank.html">Узнать больше</a>
+            <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="">
+          </div>
+          <div class="slide">
+            <p class="slide-title">Любим математику<br>
+              как никто другой</p>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+            <a class="button" href="blank.html">Узнать больше</a>
+            <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="">
+          </div>
+          <div class="slide">
+            <p class="slide-title">Только ночь,<br>
+              только хардкор</p>
+            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <a class="button" href="blank.html">Узнать больше</a>
+            <img src="img/slider/nerds-index-slide3.png" width="760" height="431" alt="">
+          </div>
+        </div>
+        <ul class="slider-list">
+          <li class="slide-item"><button type="button">Слайд 1</button></li>
+          <li class="slide-item"><button type="button">Слайд 2</button></li>
+          <li class="slide-item"><button type="button">Слайд 3</button></li>
+        </ul>
+      </div>
 
-        </section>
-        <section>
-            <h2>Продукты</h2>
-            <ul>
-                <li>
-                    <h3>Веб-сайты</h3>
-                    <img src="img/illustration/illustration-1.png" width="300" height="146" alt="Изображение сайта">
-                    <p>Мир никогда не будет прежним после того как увидит
-                        ваш сайт!</p>
-                    <a href="blank.html">Заказать</a>
-                </li>
-                <li>
-                    <h3>Приложения</h3>
-                    <img src="img/illustration/illustration-2.png" width="300" height="146"
-                        alt="Изображение приложения">
-                    <p>Покорите топ-10 приложений<br>
-                        в AppStore и Google Play</p>
-                    <a href="blank.html">Заказать</a>
-                </li>
-                <li>
-                    <h3>Презентации</h3>
-                    <img src="img/illustration/illustration-3.png" width="300" height="146"
-                        alt="Изображение Презентации">
-                    <p>Вы даже не подозреваете, <br>
-                        насколько вы изумительны!</p>
-                    <a href="blank.html">Заказать</a>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>О нас</h2>
-            <p><b>Мы — маленькая, но гордая <br>
-                    дизайн-студия из Краснодара.</b></p>
-            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br>
-                превыше креатива. Работаем не покладая рук, как роботы.</p>
-            <p><b>Выполняем заказы на разработку:</b></p>
-            <ul>
-                <li> Веб-сайтов любой сложности</li>
-                <li>Мобильных приложений для iOS и Android</li>
-                <li>Слайдшоу и видео для корпоративных презентаций</li>
-            </ul>
-            <img src="img/illustration/nerds-illustration.png" width="360" height="208"
-                alt="Праздничное изображение логотипа Нёрдс">
-            <h3>Статистика</h3>
-            <p><b>с 2004 года Любим точность во всем:</b></p>
-            <ul>
-                <li>
-                    <p><span>146</span>%</p>
-                    <p>Уровень<br>
-                        самоотдачи</p>
-                </li>
-                <li>
-                    <p><span>100</span>%</p>
-                    <p>Соблюдение<br>
-                        сроков</p>
-                </li>
-                <li>
-                    <p><span>50</span>%</p>
-                    <p>Минимальная<br>
-                        предоплата</p>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2>Партнеры</h2>
-            <ul>
-                <li>
-                    <a href="https://htmlacademy.ru/intensive/htmlcss">
-                        <img src="img/logo/logo-1.png" width="199" height="68" alt="htmlacademy">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/logo/logo-2.png" width="209" height="90" alt="Барбершоп">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/logo/logo-3.png" width="185" height="52" alt="Pink">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="img/logo/logo-4.png" width="172" height="84" alt="Мишка">
-                    </a>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer>
-        <section>
-            <img src="img/map.jpg" width="1440" height="416" alt="Карта проезда к студии Нердс">
-            <img src="img/map-marker.png" width="231" height="190" alt="">
-        </section>
-        <section>
-            <h2>Контакты</h2>
-            <p>NЁRDS DESIGN STUDIO</p>
-            <p>191186, Санкт-Петербург,<br>
-                ул. Б. Конюшенная, д. 19/8<br>
-                тел. +7 (812) 275-75-75</p>
-            <a href="blank.html">Напишите нам</a>
-        </section>
-        <section>
-            <h2>Давайте дружить!</h2>
-            <ul>
-                <li>
-                    <a href="#"><img src="img/icon/vk-icon.png" width="26" height="15" alt="Вконтакте"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="img/icon/fb-icon.png" width="12" height="22" alt="Фейсбук"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="img/icon/insta-icon.png" width="21" height="21" alt="Инстаграм"></a>
-                </li>
-            </ul>
-            <p><b>Давайте дружить, это выгодно!</b></p>
-            <p>Скидка 10% для друзей из социальных сетей.</p>
-        </section>
-    </footer>
+    </section>
+    <section class="products">
+      <h2>Продукты</h2>
+      <ul class="products-list">
+        <li class="product-item">
+          <h3>Веб-сайты</h3>
+          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <a class="button button-item-site" href="blank.html">Заказать</a>
+        </li>
+        <li class="product-item">
+          <h3>Приложения</h3>
+          <p>Покорите топ-10 приложений<br> в AppStore и Google Play</p>
+          <a class="button button-item-app" href="blank.html">Заказать</a>
+        </li>
+        <li class="product-item">
+          <h3>Презентации</h3>
+          <p>Вы даже не подозреваете, <br> насколько вы изумительны!</p>
+          <a class="button button-item-presentation" href="blank.html">Заказать</a>
+        </li>
+      </ul>
+    </section>
+    <section class="features">
+      <h2>О нас</h2>
+      <p class="features-title">Мы — маленькая, но гордая <br>
+        дизайн-студия из Краснодара.</p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет <br> превыше креатива. Работаем не
+        покладая рук, как роботы.</p>
+      <p class="features-subtitle">Выполняем заказы на разработку:</p>
+      <ul class="features-list">
+        <li class="feature-item">Веб-сайтов любой сложности</li>
+        <li class="feature-item">Мобильных приложений для iOS и Android</li>
+        <li class="feature-item">Слайдшоу и видео для корпоративных презентаций</li>
+      </ul>
+      <h3>Статистика</h3>
+      <p class="stat-title">с 2004 года Любим точность во всем:</p>
+      <ul class="statistics">
+        <li class="stat-item">
+          <p class="stat-subtitle"><span>146</span>%</p>
+          <p>Уровень<br> самоотдачи
+          </p>
+        </li>
+        <li class="stat-item">
+          <p class="stat-subtitle"><span>100</span>%</p>
+          <p>Соблюдение<br> сроков
+          </p>
+        </li>
+        <li class="stat-item">
+          <p class="stat-subtitle"><span>50</span>%</p>
+          <p>Минимальная<br> предоплата
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="partners">
+      <h2>Партнеры</h2>
+      <ul class="partners-list">
+        <li class="partner-item">
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/logo/htmlacademy.png" width="199" height="68" alt="html Академия">
+          </a>
+        </li>
+        <li class="partner-item">
+          <a href="#">
+            <img src="img/logo/barbershop.png" width="209" height="90" alt="Барбершоп">
+          </a>
+        </li>
+        <li class="partner-item">
+          <a href="#">
+            <img src="img/logo/pink.png" width="185" height="52" alt="Pink">
+          </a>
+        </li>
+        <li class="partner-item">
+          <a href="#">
+            <img src="img/logo/mishka.png" width="172" height="84" alt="Мишка">
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <section class="map">
+      <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
+    </section>
+    <section class="contacts">
+      <h2>Контакты</h2>
+      <p>NЁRDS DESIGN STUDIO</p>
+      <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75</p>
+      <a class="button" href="blank.html">Напишите нам</a>
+    </section>
+    <section class="footer-social">
+      <h2>Давайте дружить!</h2>
+      <ul class="socials-list">
+        <li>
+          <a class="social-item" href="#">Вконтакте <svg width="27" height="15" viewBox="0 0 27 15" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z"
+                fill="white" />
+            </svg></a>
+        </li>
+        <li>
+          <a class="social-item" href="#">Фейсбук<svg width="12" height="22" viewBox="0 0 12 22" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
+            </svg></a>
+        </li>
+        <li>
+          <a class="social-item" href="#">Инстаграм<svg width="21" height="21" viewBox="0 0 21 21" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z"
+                fill="white" />
+            </svg></a>
+        </li>
+      </ul>
+      <p><b>Давайте дружить, это выгодно!</b></p>
+      <p>Скидка 10% для друзей из социальных сетей.</p>
+    </section>
+  </footer>
+  <section class="modal">
+    <h2>Напишите нам</h2>
+    <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+      <p>
+        <label for="login-login">Ваше имя:</label>
+        <input class="login-user" id="login-login" type="text" name="login" placeholder="Имя Фамилия">
+      </p>
+      <p>
+        <label for="login-email">Ваш email:</label>
+        <input class="login-icon-user" id="login-login" type="email" name="login" placeholder="email@example.com">
+      </p>
+      <p>
+        <label for="login-text">Текст письма:</label>
+        <input class="login-text" id="login-text" type="textarea" name="text" placeholder="В свободной форме">
+      </p>
+      <button class="button" type="submit">Отправить</button>
+    </form>
+    <button class="modal-close" type="button">Закрыть</button>
+  </section>
 
 </body>
 
